# RustOS_toy_project

./: Cargo.toml  Makefile  README.md
doc/: 002 - kminienie trybu chronionego.txt  003 - instalacja i konfiguracja rust  004 - ciekawostki.txt
src/: lib.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
